--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -857,15 +857,27 @@ new_Data %>%
 
 ```{r echo=FALSE, Bivariate_for_amount_and_candidates3}
 
-ggplot(aes(x = cand_nm, y = contb_receipt_amt),
-       data = new_Data) +
-  geom_bar(stat = 'summary', fun.y = sum) +
+# I arranged by n to order the candidates' names and their sum of amounts as I ordered the names by contribution counts.
+cands_sum_amounts <- new_Data %>%
+  group_by(cand_nm, cand_party) %>%
+  summarise(sum_amounts = sum(contb_receipt_amt),
+            n = n()) %>%
+  arrange(desc(n))
+
+# I used factor function to order the levels in the factor of candidates' names as I arranged the names in data.frame. Ordering the data.frame rows is different from ordering the factor's levels.
+cands_sum_amounts$cand_nm <- factor(cands_sum_amounts$cand_nm,
+                                    levels = cands_sum_amounts$cand_nm)
+
+ggplot(aes(x = cand_nm, y = sum_amounts),
+       data = cands_sum_amounts) +
+  geom_bar(stat = 'identity') +
   scale_x_discrete() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
+subset(cands_sum_amounts, select = -cand_party)
 ```
 
- I drew the barplot of the sum of amounts for each candidates. And it shows really interesting result. I found that the top 5 candidates by contribution counts were Clinton, Cruz, Sanders, Trump and Carson in order. Clinton and Cruz still got first and second places. But Trump went to 3rd place beating Sanders by huge gap. What is most interesting is that Jeb Bush went to 4th place beating Sanders, Rubio and Carson. It looked like his outlier contribution amounts played huge role.
+ I drew the barplot of the sum of amounts for each candidates. When I represent the graph, I arranged the order by contribution counts, not by the sum of amounts. I did it intentionally to compare the order of counts and sums. And it shows really interesting result. I found that the top 5 candidates by contribution counts were Clinton, Cruz, Sanders, Trump and Carson in order. Clinton and Cruz still got first and second places. But Trump went to 3rd place beating Sanders by huge gap. What is most interesting is that Jeb Bush went to 4th place beating Sanders, Rubio and Carson. It looked like his outlier contribution amounts played huge role.
  
   I think that it is also worth trying to know how the contribution amounts are differed by election types. Therefore I'm going to use contb_receipt_amt and election_tp columns. And I'll use boxplot and barplot to show the differences as I did for cand_nm.
 
@@ -1416,35 +1428,29 @@ make sure you justify why you chose each plot by describing what it shows.
 ### Plot One
 ```{r echo=FALSE, Plot_One}
 
-cands_sum_amounts <- new_Data %>%
-  group_by(cand_nm, cand_party) %>%
-  summarise(sum_amounts = sum(contb_receipt_amt),
-            n = n()) %>%
-  arrange(desc(sum_amounts))
-
-cands_sum_amounts$cand_nm <- factor(cands_sum_amounts$cand_nm,
-                                    levels = cands_sum_amounts$cand_nm)
-
 ggplot(aes(x = cand_nm),
        data = cands_sum_amounts) +
-  geom_line(aes(y = sum_amounts, color = 'sum', group = 1), 
-            stat = 'identity') +
-  geom_point(aes(y = sum_amounts, color = 'sum')) +
   geom_line(aes(y = n*100, color = 'count', group = 1), 
             stat = 'identity') +
   geom_point(aes(y = n*100, color = 'count')) +
+  geom_line(aes(y = sum_amounts, color = 'sum', group = 1), 
+            stat = 'identity') +
+  geom_point(aes(y = sum_amounts, color = 'sum')) +
   scale_x_discrete() +
-  scale_fill_brewer(type = 'qual',
-                    palette = 1,
-                    guide = guide_legend(title = 'Party',
+  scale_color_brewer(type = 'qual',
+                    palette = 2,
+                    guide = guide_legend(title = 'Statistics',
                                          override.aes = list(size = 2))) +
   xlab('Names of Candidates') +
-  ylab('Sum of Contribution Cmounts\nContribution Counts(x100)') +
+  ylab('Contribution Counts(x100)\nSum of Contribution Amounts($)') +
   ggtitle(
     'Contributions to 2016 US Presidential Candidates from Texas'
     ) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-        plot.title = element_text(hjust = 0.5))
+        plot.title = element_text(hjust = 0.5, face = 'bold', size = 15),
+        axis.title.x = element_text(face = 'bold'),
+        axis.title.y = element_text(face = 'bold'),
+        legend.position = 'top')
 
 ```
 
@@ -1474,8 +1480,11 @@ ggplot(aes(x = as.Date(format(contb_receipt_dt, '%Y-%m-01'),
     subtitle = '- The Trend of Sum of Amounts by 4 Main Cities -'
     ) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-        plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5))
+        plot.title = element_text(hjust = 0.5, face = 'bold', size = 15),
+        plot.subtitle = element_text(hjust = 0.5, face = 'bold', size = 10),
+        axis.title.x = element_text(face = 'bold'),
+        axis.title.y = element_text(face = 'bold'),
+        legend.position = 'top')
 
 ```
 
@@ -1503,8 +1512,11 @@ ggplot(aes(x = contb_receipt_dt,
     subtitle = '- Distributed by Time For Main 7 Candidates -'
     ) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-        plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5)) +
+        plot.title = element_text(hjust = 0.5, face = 'bold', size = 15),
+        plot.subtitle = element_text(hjust = 0.5, face = 'bold', size = 10),
+        axis.title.x = element_text(face = 'bold'),
+        axis.title.y = element_text(face = 'bold'),
+        legend.position = 'top') +
   scale_y_log10()
 
 ```
